making menu link open/close behavior

--- a/home.html
+++ b/home.html
@@ -40,7 +40,7 @@
 
     	<div class="stamp"><a href="#/0">#rfcbr</a></div>
 
-    	<div class="menu"><a href="#/52"><img src="img/menu_indice.png"></a></div>
+    	<div class="menu"><a id="menu-link" href="#/52"><img src="img/menu_indice.png"></a></div>
 
 	    <div class="slides et-wrapper">
 	    	<!-- 1 -->
@@ -1321,7 +1321,7 @@
 			</section>
 
 			<!-- 52 -->
-			<section class="et-page final">
+			<section id="menu-page" class="et-page final">
 				<div class="v-center" style="margin-top: -310px">
 					<h3 class="indice-title">Índice</h3>
 					<ul class="indice">
