--- a/home.html
+++ b/home.html
@@ -63,9 +63,9 @@
 			<!-- 2 -->
 			<section class="et-page initial">
 				<div class="v-center" style="margin-top: -276px">
-					<p class="presentation-text">A pesquisa Retrato do Financiamento Coletivo no Brasil é um primeiro passo para um maior entendimento sobre o cenário do crowdfunding brasileiro. Os dados que serão apresentados são um recorte, e tem o intuito de permitir aos participantes deste ecosistema, sejam plataformas, realizadores ou apoiadores, compreender melhor o meio no qual estão inseridos.</p>
+					<p class="presentation-text">A pesquisa Retrato do Financiamento Coletivo no Brasil é um primeiro passo para um maior entendimento sobre o cenário do crowdfunding brasileiro. Os dados que serão apresentados são um recorte, e têm o intuito de permitir aos participantes desse ecosistema, sejam plataformas, realizadores ou apoiadores, compreender melhor o meio no qual estão inseridos.</p>
 					<p class="presentation-text">Acreditamos que quanto mais disponibilizarmos informação aberta a todos, mais potência teremos ao desenvolver o financiamento coletivo em terras brasileiras.</p>
-					<p class="presentation-text">Este estudo é uma parceria entre o Catarse, maior comunidade de financiamento coletivo do Brasil, e a Chorus, empresa de pesquisa com foco em projetos ligados à cultura e sociedade.</p>
+					<p class="presentation-text">Este estudo é uma parceria entre o Catarse, maior comunidade de financiamento coletivo do Brasil, e a Chorus, empresa de pesquisa com foco em projetos ligados a cultura e sociedade.</p>
 					<img src="img/logos.png"></img>
 				</div>
 
@@ -110,7 +110,7 @@
 				<div class="v-center" style="margin-top: -237px">
 					<h2 class="dark-h2">O que fizemos?</h2>
 					<div class="we-done">
-						<p class="we-done-presentation">Solicitamos a nossa base de usuários, assinantes da nossa newsletter e seguidores em redes sociais que respondessem a um questionário online com abordagens quantitativas e qualitativas sobre financiamento coletivo.</p>
+						<p class="we-done-presentation">Solicitamos à nossa base de usuários, assinantes da nossa newsletter e seguidores em redes sociais que respondessem a um questionário online com abordagens quantitativas e qualitativas sobre financiamento coletivo.</p>
 						<p class="we-done-data">
 							<strong class="we-done-numbers">3336</strong>
 							pessoas responderam o questionário
@@ -134,8 +134,8 @@
 			<!-- 5 -->
 			<section class="et-page initial">
 				<div class="v-center" style="margin-top: -220px">
-					<h2 class="dark-h2">Você respondeu o <br>questionário?</h2>
-					<p class="question">Queremos saber se você que está nos visitando respondeu ao questionário que gerou os resultados dessa pesquisa. Fique tranquilo, sua resposta não vai te limitar em nada e serve apenas para diferenciarmos quem está voltando de quem está conhecendo a pesquisa agora.</p>
+					<h2 class="dark-h2">Você respondeu ao <br>questionário?</h2>
+					<p class="question">Queremos saber se você que está nos visitando respondeu ao questionário que gerou os resultados desta pesquisa. Fique tranquilo, sua resposta não vai te limitar em nada e serve apenas para diferenciarmos quem está voltando de quem está conhecendo a pesquisa agora.</p>
 
 					<!-- navigation -->
 					<a class="arrow-left et-rotate" data-direction="prev" et-in="rotateRoomRightIn" et-out="rotateRoomRightOut ontop">anterior</a>
@@ -193,10 +193,16 @@
 				<div class="regions" style="margin-top: -190px">
 					<img class="regions-img" src="img/perfil/imagem-perfil-7.png" alt="">
 					<div class="regions-text">
-						<h3>Em que regiões do Brasil estamos?</h3>
-						<p>Pessoas que participam do Financiamento Coletivo já estão distribuídas por todos os Estados do Brasil e proporcionalmente a participação de cada região brasileira no financiamento coletivo parece bater com a distribuição populacional no país. Acreditamos que 2014 será o ano de espalharmos ainda mais essa ideia e alcançar mais gente no Nordeste, Norte e Centro-Oeste brasileiro.</p>
+						<h3>Como estamos distribuídos no Brasil?</h3>
+						<p>Pessoas que participam do financiamento coletivo
+ já estão distribuídas por todos os Estados do Brasil. 
+Proporcionalmente, a participação de cada região brasileira no 
+financiamento coletivo parece bater com a distribuição populacional no 
+país. Acreditamos que 2014 será o ano de espalharmos ainda mais essa 
+ideia e alcançar mais gente no Nordeste, Norte e Centro-Oeste 
+brasileiro.</p>
 						<p class="black-subtitle">Financiamento coletivo</p>
-						<p class="white-subtitle">População Brasileira</p>
+						<p class="white-subtitle">População brasileira</p>
 						<span class="source">Fontes: #rfcbr e Censo 2010</span>
 					</div>
 				</div>
@@ -457,7 +463,7 @@
 				<div class="v-center" style="margin-top: -207px">
 					<img src="img/icone-financiamento.png" alt="">
 					<h3>Financiamento</h3>
-					<p>O que é esse tipo de financiamento que é coletivo? Em quais setores parece ter mais força? Para quê os brasileiros estão usando o financiamento coletivo?</p>
+					<p>O que é esse tipo de financiamento que é coletivo? Em quais setores parece ter mais força? Para que os brasileiros estão usando o financiamento coletivo?</p>
 				</div>
 
 				<!-- navigation -->
@@ -550,7 +556,7 @@
 			<!-- 20 -->
 			<section class="et-page financing">
 				<div class="v-center" style="margin-top: -201px">
-					<h3 class="icon-heart">Que projetos as pessoas tem mais interesse em apoiar?</h3>
+					<h3 class="icon-heart">Que projetos as pessoas têm mais interesse em apoiar?</h3>
 					<ul class="project-type">
 						<li>
 							<span>52%</span>
@@ -575,8 +581,8 @@
 			<!-- 21 -->
 			<section class="et-page financing">
 				<div class="v-center" style="margin-top: -186px">
-					<h3 class="white-title">Onde faltam projetos relevantes?</h3>
-					<p class="projects-missing">Quando perguntados sobre que temas ainda precisam de mais presença no financiamento coletivo, os entrevistados apontaram áreas como <strong>educação</strong>, <strong>mobilidade e transporte</strong>, <strong>meio ambiente</strong>, <strong>negócios sociais</strong> e projetos que trabalhem <strong>valores comunitários</strong>. Veja no próximo slide o cruzamento de dados entre áreas que as pessoas tem interesse em apoiar comparada a essa percepção de falta de projetos relevantes em determinados segmentos.</p>
+					<h3 class="white-title">Em quais áreas faltam projetos relevantes?</h3>
+					<p class="projects-missing">Veja no próximo slide o cruzamento de dados entre áreas que as pessoas têm interesse em apoiar comparada a (e) essa percepção de falta de projetos relevantes em determinados segmentos.</p>
 				</div>
 
 				<!-- navigation -->
@@ -690,7 +696,14 @@
 					<img class="first-cirle" src="img/rede/imagem-rede-3.png" alt="">
 					<div class="network-side-text">
 						<h3 class="white-title">1.Ignição de projetos</h3>
-						<p>É nesse círculo de pessoas que a magia se inicia. São os amigos e parentes, pessoas próximas, que desejam seu sucesso e estão dispostas a ajudar baseados no mais incrível dos motivos: o afeto. Respeitar esse círculo, trabalhando ele bem e de forma especial é um dos segredos do sucesso. São esses os apoiadores mais valiosos, responsáveis pela ignição de um projeto e pelo estímulo psicológico inicial em uma campanha. Sem eles, tudo fica mais difícil pois eles representam de 55 a 80% dos recursos que serão captados por um realizador.</p>
+						<p>
+            É nesse círculo de pessoas que a magia se inicia. 
+            São os amigos e parentes, pessoas próximas, que desejam seu sucesso e 
+            estão dispostas a ajudar baseados no mais incrível dos motivos: o afeto. 
+            Respeitar esse círculo, trabalhá-lo bem e de forma especial é um dos segredos do sucesso.
+            São esses os apoiadores mais valiosos, responsáveis pela ignição de um projeto e pelo estímulo psicológico inicial em uma campanha. 
+            Tudo fica mais difícil sem eles, pois representam de 55 a 80% dos recursos que serão captados por um realizador.
+            </p>
 					</div>
 				</div>
 
@@ -705,7 +718,7 @@
 					<img class="second-cirle" src="img/rede/imagem-rede-4.png" alt="">
 					<div class="network-side-text">
 						<h3 class="white-title">2.Realização de projetos</h3>
-						<p>O segundo círculo é determinante. É composto por pessoas que receberão recomendações sobre um projeto a partir da rede de influências de seus conhecidos diretos e parentes. Carinhosamente apelidado de "amigos dos amigos", ele determinará se um projeto será realizado ou não, dado que cobre a lacuna de contribuições que o primeiro círculo não foi capaz de assegurar. O mais importante aqui é a comunicação sobre o projeto: Quanto mais distantes as pessoas estão de um acesso direto ao realizador, mais necessidade sentem de assegurar a credibilidade da iniciativa proposta. Comunique-se com vontade, e seja transparente sobre seus objetivos!</p>
+						<p>O segundo círculo é determinante. É composto por pessoas que receberão recomendações sobre um projeto a partir da rede de influências de seus conhecidos diretos e parentes. Carinhosamente apelidado de "amigos dos amigos", ele determinará se um projeto será realizado ou não, dado que cobre a lacuna de contribuições que o primeiro círculo não foi capaz de assegurar. O mais importante aqui é a comunicação sobre o projeto: quanto mais distantes as pessoas estão de um acesso direto ao realizador, mais necessidade sentem de assegurar a credibilidade da iniciativa proposta. Comunique-se com vontade, e seja transparente sobre seus objetivos!</p>
 					</div>
 				</div>
 
@@ -767,7 +780,11 @@
 			<section class="et-page network">
 				<div class="v-center" style="margin-top: -255px">
 					<h3 class="icon-star">Uma possibilidade: <span class="white-title">projetos populares</span></h3>
-					<p class="side-graphic">O formato do uso de plataformas que operam sob lógicas de recomendação favorecem que projetos com apelo popular espalhem aos 4 ventos a novidade do financiamento coletivo e tragam mais apoiadores, que passam a circular na plataforma. Isso influencia no apoio a vários outros projetos.</p>
+					<p class="side-graphic">
+         A lógica de recomendação da plataforma favorece que projetos com apelo 
+popular espalhem aos quatro ventos a novidade do financiamento coletivo e
+ tragam mais apoiadores, que passam a circular na plataforma. Isso influencia no apoio a vários outros projetos. 
+          </p>
 
 					<ul class="popular">
 						<li class="item-1">
@@ -806,7 +823,11 @@
 			<section class="et-page network">
 				<div class="v-center" style="margin-top: -255px">
 					<h3 class="icon-companies">Outra possibilidade: <span class="white-title">empresas</span></h3>
-					<p class="side-graphic">Uma maior presença de empresas no ecossistema do financiamento coletivo parece ser algo desejado por uma parcela relevante das pessoas que responderam a pesquisa. No entanto, fica clara uma indicação de que a expectativa é por engajamento, colaboração, e não apenas marketing.</p>
+					<p class="side-graphic">
+          Uma maior presença de empresas no ecossistema do financiamento 
+coletivo parece ser algo desejado por uma parcela relevante das pessoas 
+que responderam à pesquisa. No entanto, fica clara uma indicação de que a expectativa é por engajamento e colaboração, e não apenas marketing.
+          </p>
 
 					<ul class="popular">
 						<li class="item-1">
@@ -1034,7 +1055,7 @@
 			<section class="et-page creator">
 				<div class="v-center" style="margin-top: -192px">
 					<h3>Fases de uma campanha</h3>
-					<p class="creator-subtitle">os elementos que compõe uma campanha completa de financiamento coletivo</p>
+					<p class="creator-subtitle">Os elementos que compõem uma campanha completa de financiamento coletivo</p>
 
 					<ul class="phases">
 						<li>
@@ -1093,7 +1114,7 @@
 			<!-- 43 -->
 			<section class="et-page creator">
 				<div class="v-center" style="margin-top: -242px">
-					<h3>Porque o projeto foi bem sucedido?</h3>
+					<h3>Por que o projeto foi bem-sucedido?</h3>
 
 					<ul class="why-succeed">
 						<li class="item-1">
@@ -1117,11 +1138,11 @@
 							<span>12%</span>
 						</li>
 						<li class="item-6">
-							<p>Projeto saiu na midia</p>
+							<p>Projeto saiu na mídia</p>
 							<span>11%</span>
 						</li>
 						<li class="item-7">
-							<p>Aúxilio da equipe da plataforma</p>
+							<p>Auxílio da equipe da plataforma</p>
 							<span>9%</span>
 						</li>
 						<li class="item-8">
@@ -1139,7 +1160,7 @@
 			<!-- 44 -->
 			<section class="et-page creator">
 				<div class="v-center" style="margin-top: -289px">
-					<h3>Porque o projeto <i class="not">não</i> foi bem sucedido?</h3>
+          <h3>Por que o projeto <i class="not">não</i> foi bem-sucedido?</h3>
 
 					<ul class="why-not-succeed">
 						<li class="item-1">
