comprimindo imagens e adicionano ícone de fechamento do índice

--- a/home.html
+++ b/home.html
@@ -40,7 +40,7 @@
 
     	<div class="stamp"><a href="#/0">#rfcbr</a></div>
 
-    	<div class="menu"><a id="menu-link" href="#/52"><img src="img/menu_indice.png"></a></div>
+    	<div class="menu"><a id="menu-link" href="#/52"></a></div>
 
 	    <div class="slides et-wrapper">
 	    	<!-- 1 -->
