--- a/home.html
+++ b/home.html
@@ -62,7 +62,7 @@
 
 			<!-- 2 -->
 			<section class="et-page initial">
-				<div class="v-center" style="margin-top: -276px">
+				<div class="v-center" style="margin-top: -235px">
 					<p class="presentation-first-text">A pesquisa Retrato do Financiamento Coletivo no Brasil é um primeiro passo para um maior entendimento sobre o cenário do crowdfunding brasileiro. Os dados que serão apresentados são um recorte, e têm o intuito de permitir aos participantes desse ecosistema, sejam plataformas, realizadores ou apoiadores, compreender melhor o meio no qual estão inseridos.</p>
 					<p class="presentation-first-text">Acreditamos que quanto mais disponibilizarmos informação aberta a todos, mais potência teremos ao desenvolver o financiamento coletivo em terras brasileiras.</p>
 					<p class="presentation-first-text">Este estudo é uma parceria entre o Catarse, maior comunidade de financiamento coletivo do Brasil, e a Chorus, empresa de pesquisa com foco em projetos ligados a cultura e sociedade.</p>
@@ -422,7 +422,7 @@ brasileiro.</p>
 			<section class="et-page result-group-page" style="background: radial-gradient(circle, #F8BA77, #F38C34)">
 				<div class="v-center" style="margin-top: -300px">
 					<h3 class="habits">Hábitos e condutas</h3>
-					<img src="img/perfil/imagem-perfil-13.png" alt="">
+					<img class="habits-image" src="img/perfil/imagem-perfil-13.png" alt="">
 				</div>
 
 				<!-- navigation -->
@@ -446,7 +446,7 @@ brasileiro.</p>
 			<section class="et-page result-group-page" style="background: radial-gradient(circle, #F8BA77, #F38C34)">
 				<div class="v-center" style="margin-top: -300px">
 					<h3>na sua opinião...</h3>
-					<p class="disqus-text">O que você sugeriria que fizéssemos para expandir o financiamento coletivo no Brasil para mais pessoas?</p>
+					<p class="disqus-text">O que você sugeriria que fizéssemos para expandir o<br> financiamento coletivo no Brasil para mais pessoas?</p>
           			<iframe width="770" height="320" border="0" src="//three-years-test.herokuapp.com/disqus_1.html" class='disqus_iframe'></iframe>
 				</div>
 
@@ -649,7 +649,7 @@ brasileiro.</p>
 			<section class="et-page financing">
 				<div class="v-center" style="margin-top: -300px">
 					<h3 class="white-title">na sua opinião...</h3>
-					<p class="disqus-text-2">Você se comprometeria a contribuir com R$ 10 mensalmente se tivesse certeza de que todo mês um projeto de impacto social seria viabilizado?</p>
+					<p class="disqus-text">Você se comprometeria a contribuir com R$ 10 mensalmente se tivesse<br> certeza de que todo mês um projeto de impacto social seria viabilizado?</p>
 
 					<iframe width="770" height="320" border="0" src="//three-years-test.herokuapp.com/disqus_2.html" class='disqus_iframe'></iframe>
 				</div>
@@ -730,7 +730,7 @@ brasileiro.</p>
 			<!-- 29 -->
 			<section class="et-page network">
 				<div class="v-center" style="margin-top: -250px">
-					<img src="img/rede/imagem-rede-5.png" alt="">
+					<img class="network-side-image" src="img/rede/imagem-rede-5.png" alt="">
 					<div class="network-side-text">
 						<h3 class="white-title">3.Interesse Público</h3>
 						<p>O terceiro e último círculo é o equivalente a "cair nas graças do povo". É quando um projeto ultrapassa o primeiro e segundo círculos por trabalhar temáticas que são de interesse público, que geram comoção ou por fazerem boas campanhas a ponto de expandirem a rede de influência do projeto. Para quem pensa em projetos de grande porte, esse círculo é necessário. No entanto, é extremamente difícil de ser atingido pois depende de uma série de fatores como bom discurso, exposição na mídia, credibilidade do realizador e boa comunicação dos objetivos do projeto.</p>
@@ -890,7 +890,7 @@ que responderam à pesquisa. No entanto, fica clara uma indicação de que a exp
 			<section class="et-page network">
 				<section class="v-center" style="margin-top: 30px">
 					<h3 class="white-title">na sua opinião...</h3>
-					<p class="disqus-text-3">Como as grandes empresas podem participar e impulsionar o ecossistema do financiamento coletivo brasileiro?</p>
+					<p class="disqus-text">Como as grandes empresas podem participar e impulsionar o<br> ecossistema do financiamento coletivo brasileiro?</p>
 
           			<iframe width="770" height="320" border="0" src="//three-years-test.herokuapp.com/disqus_3.html" class='disqus_iframe'></iframe>
 				</section>
@@ -1269,7 +1269,7 @@ que responderam à pesquisa. No entanto, fica clara uma indicação de que a exp
 			<section class="et-page creator">
 				<div class="v-center" style="margin-top: -310px">
 					<h3 class="white-title">Respostas da Pesquisa</h3>
-					<p>Veja um montão de dicas rápidas diretamente de quem já fez um projeto de financiamento coletivo</p>
+					<p>Veja um montão de dicas rápidas diretamente de quem<br> já fez um projeto de financiamento coletivo</p>
 					<div id="advices" class="ballon creator-ballon">
 						<p class="response">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, maiores, libero voluptates doloremque quaerat impedit ratione quam totaasd Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, maiores, libero voluptates doloremque quaerat impedit ratione quam totaasd asdfgh tresasdoi</p>
 						<a class="change-text" href="#">Ver outra resposta</a>
