resolvendo tamanho da tipografia nos balões

--- a/home.html
+++ b/home.html
@@ -1299,7 +1299,7 @@ que responderam à pesquisa. No entanto, fica clara uma indicação de que a exp
 			<section class="et-page final">
 				<div class="v-center" style="margin-top: -280px">
 					<h3>Obrigado!</h3>
-					<p class="share-text">Agradecemos demais a sua visita e seu interesse! Acreditamos que todos somos potenciais apoiadores de projetos, basta acharmos aquele que nos sensibiliza do jeito certo.</p>
+					<p class="share-text">Agradecemos demais a sua visita e seu interesse! Fique em contato conosco, compartilhe os resultados da pesquisa e as suas descobertas e continue a nos ajudar a construir a história do financiamento coletivo no Brasil.</p>
 
 					<div class="final-box">
 						<p class="icon-mail-green">Assine a nossa news semanal e conheça projetos incríveis!</p>
