--- a/home.html
+++ b/home.html
@@ -443,7 +443,7 @@ brasileiro.</p>
 			</section>
 
 			<!-- 16 -->
-			<section class="et-page result-group-page" style="background: radial-gradient(circle, #F8BA77, #F38C34)">
+			<section class="et-page result-group-page has-disqus" style="background: radial-gradient(circle, #F8BA77, #F38C34)">
 				<div class="v-center" style="margin-top: -300px">
 					<h3>na sua opinião...</h3>
 					<p class="disqus-text">O que você sugeriria que fizéssemos para expandir o<br> financiamento coletivo no Brasil para mais pessoas?</p>
@@ -646,7 +646,7 @@ brasileiro.</p>
 			</section>
 
 			<!-- 24 -->
-			<section class="et-page financing">
+			<section class="et-page financing has-disqus">
 				<div class="v-center" style="margin-top: -300px">
 					<h3 class="white-title">na sua opinião...</h3>
 					<p class="disqus-text">Você se comprometeria a contribuir com R$ 10 mensalmente se tivesse<br> certeza de que todo mês um projeto de impacto social seria viabilizado?</p>
@@ -887,7 +887,7 @@ que responderam à pesquisa. No entanto, fica clara uma indicação de que a exp
 			</section>
 
 			<!-- 37 -->
-			<section class="et-page network">
+			<section class="et-page network has-disqus">
 				<section class="v-center" style="margin-top: 30px">
 					<h3 class="white-title">na sua opinião...</h3>
 					<p class="disqus-text">Como as grandes empresas podem participar e impulsionar o<br> ecossistema do financiamento coletivo brasileiro?</p>
