--- a/home.html
+++ b/home.html
@@ -447,7 +447,7 @@ brasileiro.</p>
 				<div class="v-center" style="margin-top: -300px">
 					<h3>na sua opinião...</h3>
 					<p class="disqus-text">O que você sugeriria que fizéssemos para expandir o<br> financiamento coletivo no Brasil para mais pessoas?</p>
-          			<iframe width="770" height="320" border="0" src="//three-years-test.herokuapp.com/disqus_1.html" class='disqus_iframe'></iframe>
+          			<iframe width="770" height="320" border="0" src="//three-years.herokuapp.com/disqus_1.html" class='disqus_iframe'></iframe>
 				</div>
 
 				<!-- navigation -->
@@ -651,7 +651,7 @@ brasileiro.</p>
 					<h3 class="white-title">na sua opinião...</h3>
 					<p class="disqus-text">Você se comprometeria a contribuir com R$ 10 mensalmente se tivesse<br> certeza de que todo mês um projeto de impacto social seria viabilizado?</p>
 
-					<iframe width="770" height="320" border="0" src="//three-years-test.herokuapp.com/disqus_2.html" class='disqus_iframe'></iframe>
+					<iframe width="770" height="320" border="0" src="//three-years.herokuapp.com/disqus_2.html" class='disqus_iframe'></iframe>
 				</div>
 
 				<!-- navigation -->
@@ -892,7 +892,7 @@ que responderam à pesquisa. No entanto, fica clara uma indicação de que a exp
 					<h3 class="white-title">na sua opinião...</h3>
 					<p class="disqus-text">Como as grandes empresas podem participar e impulsionar o<br> ecossistema do financiamento coletivo brasileiro?</p>
 
-          			<iframe width="770" height="320" border="0" src="//three-years-test.herokuapp.com/disqus_3.html" class='disqus_iframe'></iframe>
+          			<iframe width="770" height="320" border="0" src="//three-years.herokuapp.com/disqus_3.html" class='disqus_iframe'></iframe>
 				</section>
 
 				<!-- navigation -->
