change text [Fix #64232484]

--- a/home.html
+++ b/home.html
@@ -1285,7 +1285,7 @@ que responderam à pesquisa. No entanto, fica clara uma indicação de que a exp
 			<section class="et-page final">
 				<div class="v-center" style="margin-top: -280px">
 					<h3>Dados Abertos</h3>
-					<p class="final-text">A pesquisa Retrato do Financiamento Coletivo no Brasil 2013/14 é um primeiro esforço para acharmos cada vez mais respostas para o crowdfunding com jeito Brasileiro. Essa apresentação é uma síntese, um retrato a partir da ótica do Catarse.</p>
+          <p class="final-text">A pesquisa Retrato do Financiamento Coletivo no Brasil 2013/14 é um primeiro esforço para acharmos cada vez mais respostas para o crowdfunding com jeito Brasileiro. Essa apresentação é uma síntese, um retrato a partir da ótica do Catarse e da <a href='http://chorus.vc' target='__blank' title='Chorus'>Chorus</a></p>
 					<p class="final-text">Para essa pesquisa se tornar ainda mais diversa, disponibilizamos os dados abertos para que qualquer um possa extrair mais dicas, observações, sacadas e novos recortes das mais de 3 mil respostas que obtivemos. Acesse os dados abertos da RFCBr em:</p>
 					<a class="green-button" href="./rfcbr-completo.xls" download>Planilha <small>Dados estatísticos. Ideal para quem quer só observar os dados.</small></a>
 				</div>
