--- a/home.html
+++ b/home.html
@@ -34,7 +34,7 @@
 			<ul>
 				<li><div class="fb-share-button" data-href="http://pesquisa.catarse.me" data-type="button_count"></div></li>
 				<li><div class="g-plusone" data-size="medium"></div></li>
-				<li><a href="https://twitter.com/share" class="twitter-share-button" data-text="Confira a pesquisa Retrato do Financiamento Coletivo no Brasil! #rfcbr http://pesquisa.catarse.me by @catarse e Chorus.vc " data-lang="pt">Tweetar</a></li>
+				<li><a href="https://twitter.com/share" class="twitter-share-button" data-text="Confira a pesquisa Retrato do Financiamento Coletivo no Brasil! #rfcbr by @catarse e Chorus.vc " data-lang="pt">Tweetar</a></li>
 	      	</ul>
 	    </div>
 
@@ -63,7 +63,7 @@
 			<!-- 2 -->
 			<section class="et-page initial">
 				<div class="v-center" style="margin-top: -235px">
-					<p class="presentation-first-text">A pesquisa Retrato do Financiamento Coletivo no Brasil é um primeiro passo para um maior entendimento sobre o cenário do crowdfunding brasileiro. Os dados que serão apresentados são um recorte, e têm o intuito de permitir aos participantes desse ecosistema, sejam plataformas, realizadores ou apoiadores, compreender melhor o meio no qual estão inseridos.</p>
+					<p class="presentation-first-text">A pesquisa Retrato do Financiamento Coletivo no Brasil é um primeiro passo para um maior entendimento sobre o cenário do crowdfunding brasileiro. Os dados que serão apresentados são um recorte, e têm o intuito de permitir aos participantes desse ecossistema, sejam plataformas, realizadores ou apoiadores, compreender melhor o meio no qual estão inseridos.</p>
 					<p class="presentation-first-text">Acreditamos que quanto mais disponibilizarmos informação aberta a todos, mais potência teremos ao desenvolver o financiamento coletivo em terras brasileiras.</p>
 					<p class="presentation-first-text">Este estudo é uma parceria entre o Catarse, maior comunidade de financiamento coletivo do Brasil, e a Chorus, empresa de pesquisa com foco em projetos ligados a cultura e sociedade.</p>
 					<img src="img/logos.png"></img>
@@ -176,7 +176,7 @@
 			</section>
 
 			<!-- 7 -->
-			<section class="et-page result-group-page" style="background: radial-gradient(circle, #F8BA77, #F38C34)">
+			<section class="et-page result-group-page profile-bg">
 				<div class="v-center" style="margin-top: -250px">
 					<img src="img/icone-perfil.png">
 					<h3>Perfil</h3>
@@ -189,7 +189,7 @@
 			</section>
 
 			<!-- 8 -->
-			<section class="et-page result-group-page" style="background: radial-gradient(circle, #F8BA77, #F38C34)">
+			<section class="et-page result-group-page profile-bg">
 				<div class="regions" style="margin-top: -270px">
 					<img class="regions-img" src="img/perfil/imagem-perfil-7.png" alt="">
 					<div class="regions-text">
@@ -212,7 +212,7 @@ brasileiro.</p>
 			</section>
 
 			<!-- 9 -->
-			<section class="et-page result-group-page" style="background: radial-gradient(circle, #F8BA77, #F38C34)">
+			<section class="et-page result-group-page profile-bg">
 				<div class="v-center" style="margin-top: -280px">
 					<div id="gender">
 						<header>
@@ -239,13 +239,13 @@ brasileiro.</p>
 			</section>
 
 			<!-- 10 -->
-			<section class="et-page" style="background: radial-gradient(circle, #F8BA77, #F38C34)">
+			<section class="et-page profile-bg">
 				<div class="v-center" style="margin-top: -240px">
 					<div id="money">
 						<h3 id="money-title"><img src="img/perfil/icon-cifra.png">Renda mensal</h3>
 						<img id="money-image" src="img/perfil/grafico-renda.png">
 
-						<p id="money-text"><strong>74%</strong>das pessoas que fazem o financiamento coletivo acontecer no Brasil ganham até R$6.000 por mês</p>
+						<p id="money-text"><strong>64%</strong>das pessoas que fazem o financiamento coletivo acontecer no Brasil ganham até R$6.000 por mês</p>
 					</div>
 				</div>
 
@@ -255,7 +255,7 @@ brasileiro.</p>
 			</section>
 
 			<!-- 11 -->
-			<section class="et-page" style="background: radial-gradient(circle, #F8BA77, #F38C34)">
+			<section class="et-page profile-bg">
 				<div class="v-center" style="margin-top: -290px">
 					<h3 class="occupation-title icon-engine">Qual a sua ocupação?</h3>
 
@@ -301,7 +301,7 @@ brasileiro.</p>
 			</section>
 
 			<!-- 12 -->
-			<section class="et-page" style="background: radial-gradient(circle, #F8BA77, #F38C34)">
+			<section class="et-page profile-bg">
 				<div id="workarea" class="v-center" style="margin-top: -170px">
 					<div>
 						<h3>Área de trabalho</h3>
@@ -382,7 +382,7 @@ brasileiro.</p>
 			</section>
 
 			<!-- 13 -->
-			<section class="et-page result-group-page" style="background: radial-gradient(circle, #F8BA77, #F38C34)">
+			<section class="et-page result-group-page profile-bg">
 				<div id="time" class="v-center" style="margin-top: -250px">
 					<h3 id="time-title"><img src="img/perfil/icon-calendar.png">Empreendedores, há quanto tempo abriram seus negócios?</h3>
 					<ul id="time-data-list">
@@ -419,7 +419,7 @@ brasileiro.</p>
 			</section>
 
 			<!-- 14 -->
-			<section class="et-page result-group-page" style="background: radial-gradient(circle, #F8BA77, #F38C34)">
+			<section class="et-page result-group-page profile-bg">
 				<div class="v-center" style="margin-top: -300px">
 					<h3 class="habits">Hábitos e condutas</h3>
 					<img class="habits-image" src="img/perfil/imagem-perfil-13.png" alt="">
@@ -431,7 +431,7 @@ brasileiro.</p>
 			</section>
 
 			<!-- 15 -->
-			<section class="et-page result-group-page" style="background: radial-gradient(circle, #F8BA77, #F38C34)">
+			<section class="et-page result-group-page profile-bg">
 				<div id="information" class="v-center" style="margin-top: -159px">
 					<h3 id="information-title">Onde buscam informação?</h3>
 					<img src="img/perfil/grafico-informacoes.png">
@@ -443,7 +443,7 @@ brasileiro.</p>
 			</section>
 
 			<!-- 16 -->
-			<section class="et-page result-group-page has-disqus" style="background: radial-gradient(circle, #F8BA77, #F38C34)">
+			<section class="et-page result-group-page has-disqus profile-bg">
 				<div class="v-center" style="margin-top: -300px">
 					<h3>na sua opinião...</h3>
 					<p class="disqus-text">O que você sugeriria que fizéssemos para expandir o<br> financiamento coletivo no Brasil para mais pessoas?</p>
@@ -1325,7 +1325,7 @@ que responderam à pesquisa. No entanto, fica clara uma indicação de que a exp
 						<ul class="social">
 							<li><a target="_blank" href="http://www.facebook.com/sharer/sharer.php?s=100&p[url]=pesquisa.catarse.me"><img src="img/social/realiza-14-fb.png" alt=""></a></li>
 							<li><a target="_blank" href="https://plus.google.com/share?url=pesquisa.catarse.me"><img src="img/social/realiza-14-google.png" alt=""></a></li>
-							<li><a target="_blank" href="http://twitter.com/home?status=Confira%20a%20pesquisa%20Retrato%20do%20Financiamento%20Coletivo%20no%20Brasil!%20%23rfcbr%20http://pesquisa.catarse.me%20by%20@catarse%20e%20Chorus.vc"><img src="img/social/realiza-14-twitter.png" alt=""></a></li>
+							<li><a target="_blank" href="http://twitter.com/home?status=Confira%20a%20pesquisa%20Retrato%20do%20Financiamento%20Coletivo%20no%20Brasil!%20%23rfcbr%20by%20@catarse%20e%20Chorus.vc"><img src="img/social/realiza-14-twitter.png" alt=""></a></li>
 						</ul>
 					</div>
 					<hr>
