removendo o 'os'do slide 23 #65062998

--- a/home.html
+++ b/home.html
@@ -604,7 +604,7 @@ brasileiro.</p>
 			<!-- 23 -->
 			<section class="et-page financing">
 				<div class="v-center" style="margin-top: -270px">
-					<h3 class="icon-thumb">Quais os fatores importam na hora de apoiar um projeto?</h3>
+					<h3 class="icon-thumb">Quais fatores importam na hora de apoiar um projeto?</h3>
 
 					<ul class="factors">
 						<li>
